# tech_trend

./: .gitignore  README.md  all.sh  article-generator.py  article-publisher.py  article_generator.py  config.yaml  deduplicator.py  diagnose_structure.py  embedder.py  image-generator.py  image-generator_with-img-upload.py  image-generator_with_img_upload.py  pyproject.toml  query_example.py  rss-fetch.py  run.sh  scrapped_content_embedder.py  tech-trend-analysis.py  temp-prompt.md  url-scraper.py  url_scraper.py  url_scrapper.py  web_scraper.py  wiki-search.py  wiki_search.py
.github/instructions/: log.instructions.md  python.instructions.md
.github/prompts/: article_generator.md  article_image_generator.md  article_image_generator_with_image_upload.md  article_image_generator_with_image_upload_with_thumbnail.md  article_publisher.md  article_publisher_with_cover_img.md  embedder.md  image_upload_to_imgBB.md  rss_fetcher.md  semantic_deduplicatior.md  tech_trend_analysis.md  url_scrapper.md  wiki_search.md
code-gen-prompt/: article_generator.md  rss_fetcher.md  scrapped_content_embedder.md  url_scrapper.md
implementation-plan-prompts/: article_generator.md  article_publisher.md  embedder.md  rss_fetcher.md  tech_trend_analysis.md  url_scrapper.md  web_scraper.md  wiki_search.md
prompt/: article-system-prompt.md  article-system-prompt.org.md  article-user-prompt.md  tech-trend-analysis-prompt.md
rss/: rss-list copy.json  rss-list.json
src/: tech_trend_main.py
src/TechTrand.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/embedder/: utils.py  (+8 more)
(+208 files in other folders)
